# rag-service

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.claude/skills/: airflow-3  approve-feature  backend-engineer  browser-qa-frontend  data-engineer  figma-mcp  frontend-engineer  generate-deployment-checklist  go-best-practices  heroui-react  init-agent  init-feature  init-workspace  list-features  list-global-features  nestjs-best-practices  nextjs-best-practices  pipeline-parity-qa  postgres-best-practices  pr-create  pr-self-review  python-best-practices  python-data  react-native-mobile-engineer  reject-feature  resolve-project-env  respond-to-review  resume-feature  set-feature-stage  start-implementation  sync-workspace-rules  tech-lead  typescript-best-practices
.github/workflows/: release.yml
services/indexer/: __init__.py  branch_parser.py  chunker.py  git_watcher.py  main.py  pr_indexer.py  source_mapper.py  workspace_resolver.py
services/rag_server/: __init__.py  embedder.py  main.py  server.py
services/shared/: qdrant_init.py  schema.py
tests/indexer/: test_branch_parser.py  test_chunker.py  test_git_watcher.py  test_integration.py  test_main.py  test_pr_indexer.py  test_source_mapper.py  test_workspace_resolver.py
tests/rag_server/: test_integration.py  test_query_endpoint.py  test_server.py  test_sse_transport.py
tests/shared/: test_qdrant_init.py  test_schema.py
